src/objects/SREC_Transaction_History__c.object
<CustomObject>
    <description>Transaction History of SREC Certificate records.</description>
    <fields>
        <fullName>Delivery_Counterparty__c</fullName>
        <description>Delivery Counterparty</description>
        <formula>Utility_SREC_Delivery__r.Utility_SREC_Contract__r.Counterparty_Account__r.Name</formula>
        <inlineHelpText>Delivery Counterparty</inlineHelpText>
        <label>Delivery Counterparty</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Price_SREC__c</fullName>
        <formula>Utility_SREC_Delivery__r.Contract_Price_per_SREC__c - Utility_SREC_Delivery__r.Utility_SREC_Contract__r.Brokerage_Commission__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Delivery Price ($/SREC)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SREC_Certificate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to related SREC Certificate.</description>
        <inlineHelpText>Lookup to related SREC Certificate.</inlineHelpText>
        <label>SREC Certificate</label>
        <referenceTo>SREC_Certificate__c</referenceTo>
        <relationshipLabel>SREC Transactions History</relationshipLabel>
        <relationshipName>SREC_Transactions_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Transaction_Id__c</fullName>
        <description>Unique Transaction Identifier in Registry.</description>
        <externalId>true</externalId>
        <inlineHelpText>Unique Transaction Identifier in Registry.</inlineHelpText>
        <label>Transaction Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Transaction_Type__c</fullName>
        <description>Type of Transaction.</description>
        <inlineHelpText>Type of Transaction.</inlineHelpText>
        <label>Transaction Type</label>
        <picklist>
            <picklistValues>
                <fullName>Buy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sell</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Transfer_Completion_Date__c</fullName>
        <description>Utility SREC Delivery Transfer Confirmation Date</description>
        <inlineHelpText>Utility SREC Delivery Transfer Confirmation Date</inlineHelpText>
        <label>Transfer Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Transfer_Initiation_Date__c</fullName>
        <description>Transfer Initiation Date on Delivery</description>
        <inlineHelpText>Transfer Initiation Date on Delivery</inlineHelpText>
        <label>Transfer Initiation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Transferee__c</fullName>
        <description>Transferee</description>
        <inlineHelpText>Transferee</inlineHelpText>
        <label>Transferee</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transferor__c</fullName>
        <description>Transferor</description>
        <inlineHelpText>Transferor</inlineHelpText>
        <label>Transferor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Utility_SREC_Delivery__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Utility SREC Delivery.</description>
        <inlineHelpText>Lookup to Utility SREC Delivery.</inlineHelpText>
        <label>Utility SREC Delivery</label>
        <referenceTo>Utility_SREC_Delivery__c</referenceTo>
        <relationshipLabel>SREC Transactions History</relationshipLabel>
        <relationshipName>SREC_Transactions_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>SREC Transaction History</label>
    <nameField>
        <displayFormat>SRECTxn-{0000000}</displayFormat>
        <label>SREC Transaction History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SREC Transactions History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>